# FLOWORK

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUG.bat  FLOWORK.bat  FLOWORK.vbs  FLOWORK_DEBUG.bat  Flowork.lnk  Flowork.vbs  LICENSE.md  README.md  START.bat  addon_integrity.json  backup.py  clean.py  clean_.py  clean_dev.py  cleaner_tool.py  core_integrity.json  file_fingerprints.json  file_fingerprints.sig  launcher.flow  launcher.py  launcher.pyi  launcher.pyw  launcherp_.py  main.py  mkdocs.yml  pre_launcher.flow  pre_launcher.py  pre_launcher.pyi  pre_launcher.pyw  pyproject.toml  requirements.txt  run_server.bat  run_silent.bat  temp_requirements.txt  test_silent.pyw  webhook.py
flowork_gui/: GUI.md  api_contract.py  api_key.json  backup.py  exceptions.py  fix_imports.py  gui_config.json  main_gui.py  pyproject.toml  run_gui.bat
flowork_gui/api_client/: client.py
flowork_gui/components/: main_window.py
flowork_gui/core/: build_security.py
flowork_gui/modules/debug_popup_module/: TES_build_fingerprint.json  build_fingerprint.json  processor.module.flowork  processor.py  processor.pyi
flowork_gui/modules/prompt_receiver_module/: TES_build_fingerprint.json  build_fingerprint.json  processor.module.flowork  processor.py  processor.pyi
flowork_gui/plugins/flowork_core_ui/: TES_build_fingerprint.json  ai_architect_page.py  ai_trainer_page.py  build_fingerprint.json  core_editor_page.py  core_ui_provider.plugin.flowork  core_ui_provider.py  core_ui_provider.pyi  generator_page.py  marketplace_page.py  model_converter_page.py  pricing_page.py  prompt_manager_page.py  settings_tab.py  template_manager_page.py  trigger_manager_page.py  upload_dialog.py
flowork_gui/plugins/metrics_dashboard/: TES_build_fingerprint.json  build_fingerprint.json  processor.plugin.flowork  processor.py
flowork_gui/plugins/metrics_logger_plugin/: TES_build_fingerprint.json  __init__.py  build_fingerprint.json  metrics_logger.plugin.flowork  metrics_logger.py
flowork_gui/scanners/: diagnostics_page.py
flowork_gui/tools/backup_system/: archiver.py
flowork_gui/utils/: performance_logger.py
flowork_gui/views/: authentication_dialog.py  canvas_manager.py  custom_tab.py  dashboard_frame.py  dashboard_manager.py  dashboard_tab.py  main_window.py  node_properties_popup.py  properties_popup.py  shared_properties.py  version_manager_popup.py  workflow_editor_tab.py
flowork_gui/views/canvas_components/: connection_manager.py  interaction_manager.py  node_manager.py  properties_manager.py  visual_manager.py
flowork_gui/views/components/: InfoLabel.py  LabelledCombobox.py  PropertyField.py  (+2 more)
flowork_gui/widgets/: __init__.py
(+839 files in other folders)
