[tool.poetry]
name = "flowork"
version = "0.1.0"
description = "Flowork - The Limitless Visual Automation Platform"
authors = ["AWENK AUDICO"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"
pydantic = ">=2.11.7,<3.0.0"
requests = ">=2.32.4,<3.0.0"
beautifulsoup4 = ">=4.13.4,<5.0.0"
selenium = ">=4.34.2,<5.0.0"
webdriver-manager = ">=4.0.2,<5.0.0"
schedule = ">=1.2.2,<2.0.0"
watchdog = ">=6.0.0,<7.0.0"
plyer = ">=2.1.0,<3.0.0"
pandas = ">=2.3.1,<3.0.0"
apscheduler = "==3.10.4"
pycryptodome = ">=3.23.0,<4.0.0"
python-dateutil = ">=2.9.0.post0,<3.0.0"
cython = ">=3.1.2,<4.0.0"
psutil = ">=7.0.0,<8.0.0"
google-generativeai = ">=0.8.5,<0.9.0"
sentence-transformers = ">=5.0.0,<6.0.0"
numpy = "<1.24"
scipy = "<1.11"
cryptography = ">=45.0.5,<46.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
llama-cpp-python = ">=0.3.14,<0.4.0"
diffusers = "*"
accelerate = "*"
hf-xet = ">=1.1.5,<2.0.0"
transformers = ">=4.54.1,<5.0.0"
safetensors = ">=0.5.3,<0.6.0"
mss = ">=9.0.1,<10.0.0"
PyAudio = ">=0.2.14,<0.3.0"
torch = { version = ">=2.5.1,<3.0.0", source = "pytorch" }
torchvision = { version = ">=0.20.1,<0.21.0", source = "pytorch" }
torchaudio = { version = ">=2.5.1,<3.0.0", source = "pytorch" }
fake-useragent = "^2.2.0"
duckduckgo-search = "^8.1.1"
toml = "^0.10.2" # Ditambahkan untuk script audit
fastapi = {extras = ["all"], version = "^0.116.1"}
uvicorn = {extras = ["standard"], version = "^0.35.0"}
python-multipart = "^0.0.20"
websocket-client = "^1.8.0"

[tool.poetry.group.dev.dependencies]
nuitka = ">=2.7.12,<3.0.0"
radon = ">=6.0.1,<7.0.0"
pyflakes = ">=3.4.0,<4.0.0"
pip-audit = ">=2.9.0,<3.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.18"
mkdocstrings-python = "^1.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"