[tool.poetry]
name = "flowork-gui"
version = "0.1.0"
description = "Standalone GUI Client for FLOWORK Server"
authors = ["awenk audico <SAHIDINAOLA@GMAIL.COM>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ttkbootstrap = "^1.10.1"
requests = "^2.31.0"
websocket-client = "^1.7.0"
pystray = "^0.19.0"
Pillow = "^10.0.0"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
